Initial commit: FusionRec 完整项目